# trading-bot

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
src/binance/fapi/: MarketDataEndpoint.cc  MarketDataEndpoint.h
src/binance/fapi/tests/: CMakeLists.txt  TestMarketDataEndpoint.cc
src/common/util/: Encoding.h  HTTP.cc  HTTP.h
